WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172919
Missing includes cause compilation error on FreeBSD
https://bugs.webkit.org/show_bug.cgi?id=172919
Summary
Missing includes cause compilation error on FreeBSD
Ting-Wei Lan
Reported
2017-06-05 08:18:06 PDT
This causes Source/JavaScriptCore/API/tests/GlobalContextWithFinalizerTest.cpp and Source/JavaScriptCore/API/tests/GlobalContextWithFinalizerTest.cpp to fail to compile on FreeBSD. Please see the attached patch.
Attachments
Patch
(1.75 KB, patch)
2017-06-05 08:20 PDT
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
Patch
(6.99 KB, patch)
2017-06-26 08:33 PDT
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ting-Wei Lan
Comment 1
2017-06-05 08:20:13 PDT
Created
attachment 312009
[details]
Patch
Ting-Wei Lan
Comment 2
2017-06-26 08:26:04 PDT
Since this bug is still not closed and there are many missing include issues introduced in later commits, I think it is better to reuse this bug than to file a new one.
Yusuke Suzuki
Comment 3
2017-06-26 08:30:39 PDT
Comment on
attachment 312009
[details]
Patch r=me
Ting-Wei Lan
Comment 4
2017-06-26 08:33:51 PDT
Created
attachment 313842
[details]
Patch
Ting-Wei Lan
Comment 5
2017-06-26 08:35:58 PDT
unistd.h is added for pid_t. stdio.h is added for printf. stdlib.h is added for free. algorithm is added for std::min. array is added for std::array.
Mark Lam
Comment 6
2017-06-26 09:32:41 PDT
Comment on
attachment 313842
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2017-06-27 14:06:07 PDT
Comment on
attachment 313842
[details]
Patch Clearing flags on attachment: 313842 Committed
r218840
: <
http://trac.webkit.org/changeset/218840
>
WebKit Commit Bot
Comment 8
2017-06-27 14:06:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug