Source/WebKit2/UIProcess/API/C/WKPagePrivate.h
@@ -29,6 +29,8 @@
 #include <WebKit/WKBase.h>
 #include <WebKit/WKPage.h>
 
+#include <unistd.h>
+
 #ifdef __cplusplus
 extern "C" {
 #endif
