Source/JavaScriptCore/API/tests/TypedArrayCTest.cpp
@@ -29,6 +29,7 @@
 #include "JavaScript.h"
 #include <limits.h>
 #include <math.h>
+#include <stdio.h>
 #include <wtf/Assertions.h>
 
 extern "C" void JSSynchronousGarbageCollectForDebugging(JSContextRef);
